put all full-height content into verticalStretcher component which controls available render height whenever mobile browser toolbars appear or hides, also added VerticalStretcher component to keep all the sizing-issues fixing hacks in one place

--- a/src/components/GamePage/GamePage.scss
+++ b/src/components/GamePage/GamePage.scss
@@ -15,6 +15,14 @@ $directions: (top, left, bottom, right);
   }
 }
 
+.c-game-page__game-content-borders {
+  flex-grow: 1;
+  flex-shrink: 1;
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+}
+
 .c-game-page__game-launcher {
   border: 0;
   height: 100%;
